@@ -1,3 +1,7 @@
+2013-05-13 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added News - sdcc 3.3.0 RC2 and RC3
+
 2013-05-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added News - sdcc 3.3.0 RC1
